--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ textarea {
     </style>
   </head>
   <body>
-    <h2>Csit Absenties list Message Generator</h2>
-  
+    <h2>Csit Absenties List Message Generator</h2>
+    <br>
+    <h3>Select Absenties</h3>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -60,44 +61,45 @@ textarea {
 
 
 <div id="xxxy">
-  <h3>select co-host</h3>
+  <h3>Select Co-Host</h3>
   <button type="button" class="btn btn-primary c" data-toggle="button" aria-pressed="false" autocomplete="off">
-    P.Nagarani
+    P. Nagarani
   </button>
   <button type="button" class="btn btn-primary c" data-toggle="button" aria-pressed="false" autocomplete="off">
-    S.Bhargav
+    S. Bhargav
   </button>
   <button type="button" class="btn btn-primary c" data-toggle="button" aria-pressed="false" autocomplete="off">
-    M.Akhil
+    M. Akhil
   </button>
+  <br>
   <button type="button" class="btn btn-primary c" data-toggle="button" aria-pressed="false" autocomplete="off">
     Vasantha Lakshmi
   </button>
 </div>
-<h3>select host</h3>
+<h3>Select Host</h3>
 <div class="xxxz" id="xxxr">
   
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Dr.Hn.Lakshmi
+    Dr.HN. Lakshmi
   </button>
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
     Avinash Amaranayani
   </button>
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Dr.A.Srinivasa Reddy
+    Dr.A. Srinivasa Reddy
   </button>
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
-    S.Veenila Krishna
+    S. Vineela Krishna
   </button>
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
-  Dr.R.Raja
+  Dr.R. Raja
   </button>
   
     
 </div>
 
 <div class="hour">
-  <h3>select hour</h3>
+  <h3>Select Hour</h3>
   <button type="button" class="btn btn-primary h" data-toggle="button" aria-pressed="false" autocomplete="off">
     1
   </button>
@@ -114,7 +116,7 @@ textarea {
     5
   </button>
   </div>
-  <h3>select Subject</h3>
+  <h3>Select Subject</h3>
   <div class="xxxsub " id="xxx">
   
   <button type="button" class="btn btn-primary sub" data-toggle="button" aria-pressed="false" autocomplete="off">
