--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ textarea {
   <br>
   <br>
     <div>
-    <button class="www" align="right" onclick="CopytoClipBoard()">Copy</button>
+    <button class="www" align="right" onclick="copy()">Copy</button>
   <form >
 
     <textarea id="rrr">
