--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ textarea {
 </div>
     
    <br>
+    <h3>select only one option from each of the following</h3>
+    <br>
 
 <h3>Select Co-Host:</h3>
 <div id="xxxy" class="xxxaa">
