--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ textarea {
   <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
   Dr.R. Raja
   </button>
+  <button type="button" class="btn btn-primary s" data-toggle="button" aria-pressed="false" autocomplete="off">
+  Mr.A. Lawrence Raj
+  </button>
   
     
 </div>
@@ -166,6 +169,10 @@ textarea {
   
     <button type="button" class="btn btn-primary sub" data-toggle="button" aria-pressed="false" autocomplete="off">
       MEFA
+      </button>
+    
+     <button type="button" class="btn btn-primary sub" data-toggle="button" aria-pressed="false" autocomplete="off">
+      ETC Lab
       </button>
     </div>
 
